Outbox pattern 实施 + 测试