@@ -1,93 +1,101 @@
 package io.datahub.platform.iamprovisioning.interfaces.messaging;
 
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import io.datahub.platform.iamprovisioning.application.exception.IamProvisioningException;
 import io.datahub.platform.iamprovisioning.application.mapper.TenantIamDesiredStateMapper;
 import io.datahub.platform.iamprovisioning.application.pipeline.step.EnsureAdminUserStep;
 import io.datahub.platform.iamprovisioning.application.pipeline.step.EnsureOrganizationMembershipStep;
 import io.datahub.platform.iamprovisioning.application.pipeline.step.EnsureOrganizationStep;
 import io.datahub.platform.iamprovisioning.application.pipeline.step.EnsureTenantAdminRoleStep;
+import io.datahub.platform.iamprovisioning.application.port.out.repository.OutBoxEvent;
+import io.datahub.platform.iamprovisioning.application.service.ProvisioningStateTransactor;
+import io.datahub.platform.iamprovisioning.config.kafka.properties.KafkaTopicProperties;
 import io.datahub.platform.iamprovisioning.infrastructure.keycloak.exception.KeycloakAuthenticationException;
 import io.datahub.platform.iamprovisioning.infrastructure.keycloak.exception.KeycloakTransientException;
 import io.datahub.platform.iamprovisioning.application.service.TenantIamOnboardingService;
 import io.datahub.platform.iamprovisioning.application.service.TenantIamProvisioningService;
-import io.datahub.platform.iamprovisioning.domain.event.TenantIamProvisionedEvent;
-import io.datahub.platform.iamprovisioning.domain.event.TenantIamProvisioningFailedEvent;
-import io.datahub.platform.iamprovisioning.domain.event.TenantInfrastructureProvisionedEvent;
 import io.datahub.platform.iamprovisioning.domain.model.IamProvisioningFailureCode;
 import io.datahub.platform.iamprovisioning.domain.model.IamProvisioningStatus;
 import io.datahub.platform.iamprovisioning.domain.model.TenantIamProvisioningState;
 import io.datahub.platform.iamprovisioning.domain.valueobject.*;
 import io.datahub.platform.iamprovisioning.infrastructure.keycloak.FakeKeycloakAdminPort;
 import io.datahub.platform.iamprovisioning.infrastructure.keycloak.KeycloakOperation;
-import io.datahub.platform.iamprovisioning.infrastructure.messaging.InMemoryEventPublisher;
+import io.datahub.platform.iamprovisioning.infrastructure.persistence.InMemoryOutboxRepository;
 import io.datahub.platform.iamprovisioning.infrastructure.persistence.InMemoryTenantIamProvisioningStateRepository;
+import io.datahub.platform.iamprovisioning.interfaces.messaging.dto.TenantInfrastructureProvisionedEventDto;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
 import java.time.Instant;
 import java.util.List;
+import java.util.UUID;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 /**
- * 端到端集成测试：验证以 {@link TenantInfrastructureProvisionedEvent} 为入口的完整 IAM Onboarding 流程。
+ * 端到端集成测试：验证以 {@link TenantInfrastructureProvisionedEventDto} 为入口的完整 IAM Onboarding 流程。
  *
  * <h3>测试目标</h3>
  * 验证事件驱动的闭环：
  * <pre>
- * TenantInfrastructureProvisionedEvent
- *        │ (handler.handle)
+ * TenantInfrastructureProvisionedEventDto（外部契约 DTO）
+ *        │ translator.translate(dto)        ← ACL 防腐翻译（Handler 内部）
+ *        ▼
+ * TenantInfrastructureProvisionedEvent（领域事件）
+ *        │ (useCase.handle)
  *        ▼
  * TenantIamDesiredStateMapper
- *        │ (useCase.provisionTenantIam)
+ *        │ (provisionTenantIam)
  *        ▼
  * TenantIamProvisioningService → Step Pipeline (Fake Keycloak)
  *        │
- *        ├── 成功 → TenantIamProvisionedEvent 出现在 InMemoryEventPublisher
- *        └── 失败 → TenantIamProvisioningFailedEvent 出现在 InMemoryEventPublisher
+ *        ├── 成功 → TenantIamProvisionedEvent 写入 OutboxRepository
+ *        └── 失败 → TenantIamProvisioningFailedEvent 写入 OutboxRepository
  * </pre>
  *
  * <h3>基础设施选择</h3>
- * 全部使用内存实现（FakeKeycloakAdminPort、InMemoryRepository、InMemoryEventPublisher），
+ * 全部使用内存实现（FakeKeycloakAdminPort、InMemoryRepository、InMemoryOutboxRepository），
  * 不依赖任何外部服务，可快速执行，适合 CI 环境。
  */
 class TenantIamOnboardingEventHandlerTest {
 
-    // 被测对象：事件处理器，是整个流程的唯一入口
     private TenantIamOnboardingEventHandler handler;
 
-    // 基础设施 Fake 实现，测试中可直接读取其内部状态进行断言
     private FakeKeycloakAdminPort fakeKeycloak;
-    private InMemoryTenantIamProvisioningStateRepository repository;
-    private InMemoryEventPublisher eventPublisher;
+    private InMemoryTenantIamProvisioningStateRepository stateRepository;
+    private InMemoryOutboxRepository outboxRepository;
+    private ObjectMapper objectMapper;
 
     @BeforeEach
     void setUp() {
-        // 组装所有依赖：这里展示了完整的对象图，也证明了无需 Spring 容器即可运行
         fakeKeycloak = new FakeKeycloakAdminPort();
-        repository = new InMemoryTenantIamProvisioningStateRepository();
-        eventPublisher = new InMemoryEventPublisher();
+        stateRepository = new InMemoryTenantIamProvisioningStateRepository();
+        outboxRepository = new InMemoryOutboxRepository();
+        objectMapper = new ObjectMapper();
+
+        KafkaTopicProperties kafkaTopicProperties = new KafkaTopicProperties();
+        kafkaTopicProperties.setTenantIamProvisioned("test.cdp.iam.provisioned");
+        kafkaTopicProperties.setTenantIamProvisionFailed("test.cdp.iam.provision-failed");
+
+        ProvisioningStateTransactor transactor = new ProvisioningStateTransactor(
+                stateRepository, outboxRepository, objectMapper, kafkaTopicProperties);
 
         TenantIamProvisioningService service = new TenantIamProvisioningService(
-                repository,
+                stateRepository,
                 List.of(
                         new EnsureOrganizationStep(fakeKeycloak),
                         new EnsureAdminUserStep(fakeKeycloak),
                         new EnsureTenantAdminRoleStep(fakeKeycloak),
                         new EnsureOrganizationMembershipStep(fakeKeycloak)
-                ),
-                eventPublisher
-        );
+                ), transactor);
 
-        // TenantIamOnboardingService 持有 mapper，实现 HandleTenantIamOnboardingEventUseCase Port
         TenantIamOnboardingService onboardingService = new TenantIamOnboardingService(
                 new TenantIamDesiredStateMapper(),
-                service
-        );
+                service);
 
-        // 薄适配器：仅持有 Port，不含任何业务逻辑
         handler = new TenantIamOnboardingEventHandler(onboardingService);
     }
 
@@ -96,23 +104,20 @@ class TenantIamOnboardingEventHandlerTest {
     // ─────────────────────────────────────────────────────────────────────────────
 
     @Test
-    @DisplayName("成功路径：接收到入站事件后，应完成 IAM Provisioning 并发布 TenantIamProvisionedEvent")
+    @DisplayName("成功路径：接收到入站 DTO，经 ACL 翻译后完成 IAM Provisioning 并发布 TenantIamProvisionedEvent")
     void handle_shouldCompleteProvisioningAndPublishSuccessEvent_whenNoFailures() {
-        // 构造入站事件（模拟从上游 Tenant Management BC 接收）
-        TenantInfrastructureProvisionedEvent inboundEvent = TenantInfrastructureProvisionedEvent.of(
-                TenantId.of("tenant-acme"),
-                TenantName.of("Acme Corp"),
-                Tier.of("BASIC"),
-                Email.of("admin@acme.com"),
-                CorrelationId.newCorrelationId(),
-                Instant.now()
+        String tenantId = "tenant-acme";
+        String email = "admin@acme.com";
+        String correlationId = UUID.randomUUID().toString();
+
+        TenantInfrastructureProvisionedEventDto dto = new TenantInfrastructureProvisionedEventDto(
+                tenantId, "Acme Corp", "BASIC", email, correlationId, Instant.now().toString()
         );
 
-        // 驱动被测流程
-        handler.handle(inboundEvent);
+        handler.handle(dto);
 
         // === 断言 1：本地状态机最终进入 COMPLETED ===
-        TenantIamProvisioningState state = repository.findByTenantId(inboundEvent.tenantId()).orElseThrow();
+        TenantIamProvisioningState state = stateRepository.findByTenantId(TenantId.of(tenantId)).orElseThrow();
         assertThat(state.getOverallStatus()).isEqualTo(IamProvisioningStatus.IAM_COMPLETED);
         assertThat(state.isKeycloakOrganizationCreated()).isTrue();
         assertThat(state.isAdminUserCreated()).isTrue();
@@ -121,26 +126,22 @@ class TenantIamOnboardingEventHandlerTest {
 
         // === 断言 2：Keycloak（Fake）中确实创建了对应的对象 ===
         assertThat(fakeKeycloak.organizationsSnapshot()).hasSize(1)
-                .containsKey(inboundEvent.tenantId());
+                .containsKey(TenantId.of(tenantId));
         assertThat(fakeKeycloak.usersSnapshot()).hasSize(1)
-                .containsKey(inboundEvent.adminEmail());
+                .containsKey(Email.of(email));
 
-        // === 断言 3：成功事件已发布，字段与输入事件一致 ===
-        // 验证事件驱动的输出闭环：有事件进来，就有事件出去
-        List<TenantIamProvisionedEvent> publishedEvents =
-                eventPublisher.getPublishedEvents(TenantIamProvisionedEvent.class);
-        assertThat(publishedEvents).hasSize(1);
+        // === 断言 3：成功事件已写入 Outbox ===
+        List<OutBoxEvent> outBoxEvents = outboxRepository.allEvents();
+        assertThat(outBoxEvents).hasSize(1);
 
-        TenantIamProvisionedEvent successEvent = publishedEvents.get(0);
-        assertThat(successEvent.tenantId()).isEqualTo(inboundEvent.tenantId());
-        assertThat(successEvent.tier()).isEqualTo(inboundEvent.tier());
-        assertThat(successEvent.adminEmail()).isEqualTo(inboundEvent.adminEmail());
-        // correlationId 贯穿：入站事件的 correlationId 出现在出站事件中
-        assertThat(successEvent.correlationId()).isEqualTo(inboundEvent.correlationId());
+        OutBoxEvent successEvent = outBoxEvents.getFirst();
+        assertThat(successEvent.eventType()).isEqualTo("TenantIamProvisionedEvent");
+        assertThat(successEvent.aggregateId()).isEqualTo(tenantId);
+        assertThat(successEvent.correlationId()).isEqualTo(correlationId);
         assertThat(successEvent.occurredAt()).isNotNull();
 
-        // === 断言 4：没有错误事件被发布 ===
-        assertThat(eventPublisher.getPublishedEvents(TenantIamProvisioningFailedEvent.class)).isEmpty();
+        // === 断言 4：没有失败事件被写入 ===
+        assertThat(outboxRepository.eventsByType("TenantIamProvisioningFailedEvent")).isEmpty();
     }
 
     // ─────────────────────────────────────────────────────────────────────────────
@@ -149,25 +150,20 @@ class TenantIamOnboardingEventHandlerTest {
 
     @Test
     @DisplayName("可重试失败路径：Step 出现瞬时故障时，应进入 AWAITING_RETRY 并发布失败事件（retryable=true）")
-    void handle_shouldPublishRetryableFailedEvent_whenStepThrowsTransientError() {
-        // 注入故障：ENSURE_ORGANIZATION_MEMBERSHIP 第 1 次调用时抛出瞬时异常（模拟 Keycloak 暂时不可用）
+    void handle_shouldPublishRetryableFailedEvent_whenStepThrowsTransientError() throws Exception {
+        String tenantId = "tenant-beta";
         fakeKeycloak.scheduleFailures(
                 KeycloakOperation.ENSURE_ORGANIZATION_MEMBERSHIP,
                 1,
-                new KeycloakTransientException(KeycloakOperation.ENSURE_ORGANIZATION_MEMBERSHIP, TenantId.of("tenant-beta"), null)
+                new KeycloakTransientException(KeycloakOperation.ENSURE_ORGANIZATION_MEMBERSHIP, TenantId.of(tenantId), null)
         );
 
-        TenantInfrastructureProvisionedEvent inboundEvent = TenantInfrastructureProvisionedEvent.of(
-                TenantId.of("tenant-beta"),
-                TenantName.of("Beta Inc"),
-                Tier.of("BASIC"),
-                Email.of("admin@beta.com"),
-                CorrelationId.newCorrelationId(),
-                Instant.now()
+        String correlationId = UUID.randomUUID().toString();
+        TenantInfrastructureProvisionedEventDto dto = new TenantInfrastructureProvisionedEventDto(
+                tenantId, "Beta Inc", "BASIC", "admin@beta.com", correlationId, Instant.now().toString()
         );
 
-        // 服务应抛出可重试异常，让调用方（Kafka Consumer）决定何时重试
-        assertThatThrownBy(() -> handler.handle(inboundEvent))
+        assertThatThrownBy(() -> handler.handle(dto))
                 .isInstanceOf(IamProvisioningException.class)
                 .satisfies(ex -> {
                     IamProvisioningException e = (IamProvisioningException) ex;
@@ -175,27 +171,26 @@ class TenantIamOnboardingEventHandlerTest {
                     assertThat(e.failureCode()).isEqualTo(IamProvisioningFailureCode.KEYCLOAK_UNAVAILABLE);
                 });
 
-        // === 断言 1：本地状态为 AWAITING_RETRY（不是 FAILED）===
-        TenantIamProvisioningState state = repository.findByTenantId(inboundEvent.tenantId()).orElseThrow();
+        // === 断言 1：本地状态为 AWAITING_RETRY ===
+        TenantIamProvisioningState state = stateRepository.findByTenantId(TenantId.of(tenantId)).orElseThrow();
         assertThat(state.getOverallStatus()).isEqualTo(IamProvisioningStatus.IAM_AWAITING_RETRY);
         assertThat(state.getRetryCount()).isEqualTo(1);
-        assertThat(state.getNextRetryAt()).isNotNull();   // 退避重试时间点已计算
+        assertThat(state.getNextRetryAt()).isNotNull();
 
-        // === 断言 2：失败事件已发布，retryable=true ===
-        // 这是关键验证：下游审计或告警系统能区分"瞬时失败需等待"与"永久失败需人工处理"
-        List<TenantIamProvisioningFailedEvent> failedEvents =
-                eventPublisher.getPublishedEvents(TenantIamProvisioningFailedEvent.class);
-        assertThat(failedEvents).hasSize(1);
+        // === 断言 2：失败事件已写入 Outbox，retryable=true ===
+        List<OutBoxEvent> failedOutboxEvents = outboxRepository.eventsByType("TenantIamProvisioningFailedEvent");
+        assertThat(failedOutboxEvents).hasSize(1);
 
-        TenantIamProvisioningFailedEvent failedEvent = failedEvents.get(0);
-        assertThat(failedEvent.tenantId()).isEqualTo(inboundEvent.tenantId());
-        assertThat(failedEvent.tier()).isEqualTo(inboundEvent.tier());
-        assertThat(failedEvent.failureCode()).isEqualTo(IamProvisioningFailureCode.KEYCLOAK_UNAVAILABLE);
-        assertThat(failedEvent.retryable()).isTrue();     // 下游据此决定等待重试而非发告警
-        assertThat(failedEvent.correlationId()).isEqualTo(inboundEvent.correlationId());
+        OutBoxEvent failedOutboxEvent = failedOutboxEvents.getFirst();
+        assertThat(failedOutboxEvent.aggregateId()).isEqualTo(tenantId);
+        assertThat(failedOutboxEvent.correlationId()).isEqualTo(correlationId);
 
-        // === 断言 3：没有成功事件被发布 ===
-        assertThat(eventPublisher.getPublishedEvents(TenantIamProvisionedEvent.class)).isEmpty();
+        JsonNode payload = objectMapper.readTree(failedOutboxEvent.payload());
+        assertThat(payload.get("failureCode").asText()).isEqualTo(IamProvisioningFailureCode.KEYCLOAK_UNAVAILABLE.name());
+        assertThat(payload.get("retryable").asText()).isEqualTo("true");
+
+        // === 断言 3：没有成功事件被写入 ===
+        assertThat(outboxRepository.eventsByType("TenantIamProvisionedEvent")).isEmpty();
     }
 
     // ─────────────────────────────────────────────────────────────────────────────
@@ -204,25 +199,20 @@ class TenantIamOnboardingEventHandlerTest {
 
     @Test
     @DisplayName("不可重试失败路径：Step 出现认证错误时，应进入 IAM_FAILED 并发布失败事件（retryable=false）")
-    void handle_shouldPublishNonRetryableFailedEvent_whenStepThrowsAuthError() {
-        // 注入故障：认证异常（如凭证撤销或权限变更），不应重试
+    void handle_shouldPublishNonRetryableFailedEvent_whenStepThrowsAuthError() throws Exception {
+        String tenantId = "tenant-gamma";
         fakeKeycloak.scheduleFailures(
                 KeycloakOperation.ENSURE_ORGANIZATION_MEMBERSHIP,
                 1,
-                new KeycloakAuthenticationException(TenantId.of("tenant-gamma"), KeycloakOperation.ENSURE_ORGANIZATION_MEMBERSHIP, "forbidden", null)
+                new KeycloakAuthenticationException(TenantId.of(tenantId), KeycloakOperation.ENSURE_ORGANIZATION_MEMBERSHIP, "forbidden", null)
         );
 
-        TenantInfrastructureProvisionedEvent inboundEvent = TenantInfrastructureProvisionedEvent.of(
-                TenantId.of("tenant-gamma"),
-                TenantName.of("Gamma Ltd"),
-                Tier.of("BASIC"),
-                Email.of("admin@gamma.com"),
-                CorrelationId.newCorrelationId(),
-                Instant.now()
+        String correlationId = UUID.randomUUID().toString();
+        TenantInfrastructureProvisionedEventDto dto = new TenantInfrastructureProvisionedEventDto(
+                tenantId, "Gamma Ltd", "BASIC", "admin@gamma.com", correlationId, Instant.now().toString()
         );
 
-        // 服务应抛出不可重试异常
-        assertThatThrownBy(() -> handler.handle(inboundEvent))
+        assertThatThrownBy(() -> handler.handle(dto))
                 .isInstanceOf(IamProvisioningException.class)
                 .satisfies(ex -> {
                     IamProvisioningException e = (IamProvisioningException) ex;
@@ -230,25 +220,25 @@ class TenantIamOnboardingEventHandlerTest {
                     assertThat(e.failureCode()).isEqualTo(IamProvisioningFailureCode.KEYCLOAK_AUTH_FAILED);
                 });
 
-        // === 断言 1：本地状态为 IAM_FAILED（终态，需人工介入）===
-        TenantIamProvisioningState state = repository.findByTenantId(inboundEvent.tenantId()).orElseThrow();
+        // === 断言 1：本地状态为 IAM_FAILED（终态） ===
+        TenantIamProvisioningState state = stateRepository.findByTenantId(TenantId.of(tenantId)).orElseThrow();
         assertThat(state.getOverallStatus()).isEqualTo(IamProvisioningStatus.IAM_FAILED);
-        assertThat(state.getNextRetryAt()).isNull();    // 不可重试：无退避时间点
+        assertThat(state.getNextRetryAt()).isNull();
 
-        // === 断言 2：失败事件已发布，retryable=false ===
-        // 下游告警系统据此立刻触发 PagerDuty / Slack 告警，不等待重试
-        List<TenantIamProvisioningFailedEvent> failedEvents =
-                eventPublisher.getPublishedEvents(TenantIamProvisioningFailedEvent.class);
-        assertThat(failedEvents).hasSize(1);
+        // === 断言 2：失败事件已写入 Outbox，retryable=false ===
+        List<OutBoxEvent> failedOutboxEvents = outboxRepository.eventsByType("TenantIamProvisioningFailedEvent");
+        assertThat(failedOutboxEvents).hasSize(1);
 
-        TenantIamProvisioningFailedEvent failedEvent = failedEvents.get(0);
-        assertThat(failedEvent.tenantId()).isEqualTo(inboundEvent.tenantId());
-        assertThat(failedEvent.failureCode()).isEqualTo(IamProvisioningFailureCode.KEYCLOAK_AUTH_FAILED);
-        assertThat(failedEvent.retryable()).isFalse();   // 下游据此立刻告警，不等待重试
-        assertThat(failedEvent.correlationId()).isEqualTo(inboundEvent.correlationId());
+        OutBoxEvent failedOutboxEvent = failedOutboxEvents.getFirst();
+        assertThat(failedOutboxEvent.aggregateId()).isEqualTo(tenantId);
+        assertThat(failedOutboxEvent.correlationId()).isEqualTo(correlationId);
 
-        // === 断言 3：没有成功事件被发布 ===
-        assertThat(eventPublisher.getPublishedEvents(TenantIamProvisionedEvent.class)).isEmpty();
+        JsonNode payload = objectMapper.readTree(failedOutboxEvent.payload());
+        assertThat(payload.get("failureCode").asText()).isEqualTo(IamProvisioningFailureCode.KEYCLOAK_AUTH_FAILED.name());
+        assertThat(payload.get("retryable").asText()).isEqualTo("false");
+
+        // === 断言 3：没有成功事件被写入 ===
+        assertThat(outboxRepository.eventsByType("TenantIamProvisionedEvent")).isEmpty();
     }
 
     // ─────────────────────────────────────────────────────────────────────────────
@@ -258,48 +248,40 @@ class TenantIamOnboardingEventHandlerTest {
     @Test
     @DisplayName("幂等恢复：可重试失败后重新触发，应成功完成 Provisioning 并发布成功事件")
     void handle_shouldRecoverIdempotently_afterRetryableFailure() {
-        TenantId tenantId = TenantId.of("tenant-delta");
-        Email adminEmail = Email.of("admin@delta.com");
-        CorrelationId firstCorrelationId = CorrelationId.newCorrelationId();
+        String tenantId = "tenant-delta";
+        String email = "admin@delta.com";
+        String correlationId = UUID.randomUUID().toString();
 
-        // 第一次触发：注入一次瞬时故障
         fakeKeycloak.scheduleFailures(
                 KeycloakOperation.ENSURE_ORGANIZATION_MEMBERSHIP,
                 1,
-                new KeycloakTransientException(KeycloakOperation.ENSURE_ORGANIZATION_MEMBERSHIP, tenantId, null)
+                new KeycloakTransientException(KeycloakOperation.ENSURE_ORGANIZATION_MEMBERSHIP, TenantId.of(tenantId), null)
         );
 
-        TenantInfrastructureProvisionedEvent firstEvent = TenantInfrastructureProvisionedEvent.of(
-                tenantId, TenantName.of("Delta Corp"), Tier.of("BASIC"),
-                adminEmail, firstCorrelationId, Instant.now()
+        TenantInfrastructureProvisionedEventDto firstDto = new TenantInfrastructureProvisionedEventDto(
+                tenantId, "Delta Corp", "BASIC", email, correlationId, Instant.now().toString()
         );
 
-        // 第一次调用失败（预期行为）
-        assertThatThrownBy(() -> handler.handle(firstEvent))
+        assertThatThrownBy(() -> handler.handle(firstDto))
                 .isInstanceOf(IamProvisioningException.class);
 
-        // 验证失败事件已发布
-        assertThat(eventPublisher.getPublishedEvents(TenantIamProvisioningFailedEvent.class)).hasSize(1);
+        // 第一次失败后 Outbox 里有一条失败事件
+        assertThat(outboxRepository.eventsByType("TenantIamProvisioningFailedEvent")).hasSize(1);
 
-        // 第二次触发：用新的 correlationId 重试（模拟 RetryScheduler 重新发起）
-        // 故障已消除（未注入新故障），应成功
-        CorrelationId retryCorrelationId = CorrelationId.newCorrelationId();
-        TenantInfrastructureProvisionedEvent retryEvent = TenantInfrastructureProvisionedEvent.of(
-                tenantId, TenantName.of("Delta Corp"), Tier.of("BASIC"),
-                adminEmail, retryCorrelationId, Instant.now()
+        // 第二次触发：故障已消除，correlationId 相同（幂等重试）
+        TenantInfrastructureProvisionedEventDto retryDto = new TenantInfrastructureProvisionedEventDto(
+                tenantId, "Delta Corp", "BASIC", email, correlationId, Instant.now().toString()
         );
 
-        handler.handle(retryEvent);
+        handler.handle(retryDto);
 
         // === 断言 1：最终状态 COMPLETED ===
-        TenantIamProvisioningState state = repository.findByTenantId(tenantId).orElseThrow();
+        TenantIamProvisioningState state = stateRepository.findByTenantId(TenantId.of(tenantId)).orElseThrow();
         assertThat(state.getOverallStatus()).isEqualTo(IamProvisioningStatus.IAM_COMPLETED);
 
-        // === 断言 2：成功事件已发布，使用重试时的 correlationId ===
-        List<TenantIamProvisionedEvent> successEvents =
-                eventPublisher.getPublishedEvents(TenantIamProvisionedEvent.class);
-        assertThat(successEvents).hasSize(1);
-        assertThat(successEvents.get(0).correlationId()).isEqualTo(retryCorrelationId);
+        // === 断言 2：成功事件已写入 Outbox ===
+        List<OutBoxEvent> successOutboxEvents = outboxRepository.eventsByType("TenantIamProvisionedEvent");
+        assertThat(successOutboxEvents).hasSize(1);
 
         // === 断言 3：Keycloak 中只有一份数据（幂等性：前两个步骤未重复创建）===
         assertThat(fakeKeycloak.organizationsSnapshot()).hasSize(1);
